index.html further updated

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>BootCamp2020</title>
 </head>
 <body>
-    <h1>Hello world from maryum and hamza</h1>
+    <h1>Hello world from maryum and all the world</h1>
 </body>
 </html>
